--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
 }
 
 iframe {
-  width:  400px;
+  width:  100%;
   height: 300px;
 }
 
@@ -497,6 +497,9 @@ img.spin {
   }
   .laufey-music-item:nth-child(2) img, .laufey-music-item:nth-child(3) img {
     width: 75%;
+  }
+  iframe {
+    width:  450px;
   }
 }
 
