--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ iframe {
 .image {
   border-radius: 12px;
   border: solid 4px #9eb3cc;
+  width: 90%;
 }
 
 #dodie-logo, #olivia-logo {
@@ -179,10 +180,6 @@ iframe {
   margin-bottom: 20px;
 }
 
-.dodie_item h1 {
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
 
 .side-by-side {
   display: flex;
@@ -342,7 +339,6 @@ footer {
 }
 
 .dodie_item img {
-  width: 100%;
   border-radius: 100%;
 }
 
@@ -444,6 +440,8 @@ img.spin {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
   }
   .dodie_display {
     flex-basis: 100%;
