--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@
     font-size: 1.5em;
  }
 
+p {
+ margin-top: 2%;
+ margin-bottom: 2%;
+}
+
  #sour-body,  #sour-nav {
   background: #dfbbf1;
  }
