--- a/css/style.css
+++ b/css/style.css
@@ -1,595 +1,605 @@
- body {
-    text-align: center; 
-    margin-left: 5%;
-    margin-right: 5%;
-    color: #3f3e3e;
+body {
+  text-align: center; 
+  margin-left: 5%;
+  margin-right: 5%;
+  color: #3f3e3e;
 
-    font-family: 'Nanum Pen Script', Times, serif;
-    font-size: 1.5em;
- }
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.4em;
+}
+
+h1, h2, .artist p {
+  font-family: 'Nanum Pen Script', Times, serif;
+}
 
 p {
- margin-top: 2%;
- margin-bottom: 2%;
+margin-top: 4%;
+margin-bottom: 4%;
 }
 
- #sour-body,  #sour-nav {
-  background: #dfbbf1;
- }
+.imagelabel {
+  margin-top: 4%;
+}
 
- #eikal-body,  #eikal-nav {
-   background: #cdffd5;
- }
+#sour-body,  #sour-nav {
+background: #dfbbf1;
+}
 
- #bap-body, #bap-nav {
-  background: #c6defa;
- }
+#eikal-body,  #eikal-nav {
+ background: #cdffd5;
+}
 
- #home-body, #home-nav {
-   background: #f1f1f1;
- }
+#bap-body, #bap-nav {
+background: #c6defa;
+}
+
+#home-body, #home-nav {
+ background: #f1f1f1;
+}
 
 #self {
-  background: #eae5f4;
+background: #eae5f4;
 }
 
- a, a:visited {
-  text-decoration: none;
-  color: #3f3e3e;
+a, a:visited {
+text-decoration: none;
+color: #3f3e3e;
 }
 
- .skip a{
-  background: #ffffff;
-  left: 0;
-  padding: 6px;
-  -webkit-transition: top 1s ease-out;
-  transition: top 1s ease-out;
-  z-index: 10 ;
-  color: #3f3e3e;
-  position: absolute; 
-  top: -70px;
-  left: 10px;
+.skip a{
+background: #ffffff;
+left: 0;
+padding: 6px;
+-webkit-transition: top 1s ease-out;
+transition: top 1s ease-out;
+z-index: 10 ;
+color: #3f3e3e;
+position: absolute; 
+top: -70px;
+left: 10px;
 }
 
 .skip a:focus {
-  top: 20px;
+top: 20px;
 }
 
 *:focus {
-  border: solid 2px #ffffff;
+border: solid 2px #ffffff;
 }
 
 iframe {
-  width:  100%;
-  height: 300px;
+width:  100%;
+height: 300px;
 }
 
 .about img {
-  width: 50%;
+width: 50%;
 }
 
 #olivia, #sour-body .side-by-side img {
-  border: solid 4px #807EBF;
-  border-radius: 12px;
+border: solid 4px #807EBF;
+border-radius: 12px;
 }
 
 .laufey {
-  border-radius: 12px;
-  border: solid 4px #76a184;
+border-radius: 12px;
+border: solid 4px #76a184;
 }
 
 #self, #home-polaroids img, .artist img {
-  border-radius: 100%;
-  border: solid 4px #3f3e3e;
+border-radius: 100%;
+border: solid 4px #3f3e3e;
 }
 
 #home-about h1 {
-  font-size: 2em;
-  padding-top: 20px;
-  padding-bottom: 20px;
+font-size: 2em;
+padding-top: 20px;
+padding-bottom: 20px;
 }
 
 #home-about .cd_links a {
-  font-size: 0.8em;
+font-size: 0.8em;
 }
 
 #home-about .cd_links {
-  padding: 0px;
-  padding-bottom: 20px;
+padding: 0px;
+padding-bottom: 20px;
 }
 
 #home-about img {
-  width: 50%;
+width: 50%;
 }
 
 .image {
-  border-radius: 12px;
-  border: solid 4px #9eb3cc;
-  width: 90%;
+border-radius: 12px;
+border: solid 4px #9eb3cc;
+width: 90%;
 }
 
 #dodie-logo, #olivia-logo {
-  width: 30%;
-  padding-top: 20px;
+width: 30%;
+padding-top: 20px;
 }
 
 #olivia-logo {
-  width: 20%;
+width: 20%;
 }
 
 .home-section, #home-polaroids, #artists {
-  padding-top: 5%;
+padding-top: 5%;
 }
 
 .spotify {
-  border-radius: 12px;
-  width: 100%;
-  height: 352px;
+border-radius: 12px;
+width: 100%;
+height: 352px;
 }
 
 .laufey-music img {
-  width: 100%;
-  border-radius: 12px;
+width: 100%;
+border-radius: 12px;
 }
 
 .laufey-music-item {
-  font-size: 0.7em;
-  border-radius: 12px;
-  margin: 8px;
-  padding: 5px;
+font-size: 0.7em;
+border-radius: 12px;
+margin: 8px;
+padding: 5px;
 }
 
 .laufey-music {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding-top: 10px;
-  padding-bottom: 10px;
+display: grid;
+grid-template-columns: 1fr 1fr;
+padding-top: 10px;
+padding-bottom: 10px;
 }
 
 .polaroids img {
-  width: 80%;
-  margin: 0 auto;
+width: 80%;
+margin: 0 auto;
 }
 
 .polaroids {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  margin: 0 auto;
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+padding-top: 20px;
+padding-bottom: 20px;
+margin: 0 auto;
 }
 
 .polaroids img:nth-child(even) {
-  transform: rotate(10deg);
+transform: rotate(10deg);
 }
 
 .polaroids img:nth-child(odd) {
-  transform: rotate(-10deg);
+transform: rotate(-10deg);
 }
 
 #home-polaroids img:first-child, #artists img:first-child {
-  transform: rotate(0deg);
+transform: rotate(0deg);
 }
 
 .polaroids img {
-  transition: transform .2s;
+transition: transform .2s;
 }
 
 .polaroids img:hover, .polaroids img:focus, #home-polaroids img:first-child:hover, #home-polaroids img:first-child:focus, #artists img:first-child:focus, #artists img:first-child:hover {
-  transform: scale(1.1);
-  z-index: 1;
+transform: scale(1.1);
+z-index: 1;
 }
 
 #artists p {
-  margin-top: 10px;
-  margin-bottom: 20px;
+margin-top: 10px;
+margin-bottom: 20px;
 }
 
 
 .side-by-side {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+display: flex;
+flex-direction: row;
+justify-content: center;
 }
 
 .side-by-side img {
-  width: 45%;
-  margin-left: 5px;
-  margin-right: 5px;
+width: 45%;
+margin-left: 5px;
+margin-right: 5px;
 }
 
 .side-by-side picture img {
-  width: 90%;
+width: 90%;
 }
 
 picture {
-  width: 100%;
+width: 100%;
 }
 
 #eikal-logo {
-  width: 30%;
-  filter: brightness(0%);
+width: 30%;
+filter: brightness(0%);
 }
 
 /* styling the nav in a separate div for js */
- .nav-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  box-sizing: border-box;
-  z-index: 2;
+.nav-container {
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
+padding: 20px;
+box-sizing: border-box;
+z-index: 2;
+font-family: 'Nanum Pen Script', Times, serif;
 
-  min-height: 75px;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
- }
+min-height: 75px;
+background-attachment: fixed;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
 
 h1 {
-  margin: 0;
-  font-weight: normal;
-  font-size: 1.3em;
+margin: 0;
+font-weight: normal;
+font-size: 1.3em;
 }
 
 .active {
-  text-decoration: underline;
+text-decoration: underline;
 }
 
- /* set up menu bars for mobile */
+/* set up menu bars for mobile */
 .menu_bars {
-    cursor: pointer;
-  }
-
-  .bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 3px;
-    background-color: #3f3e3e;
-    margin: 6px 0;
-    transition: 0.4s;
-  }
-
-  .nav_item {
-      padding: 15px 0;
-  }
-
-  .nav_list {
-    display: none;
-    height: 70vh;
-    flex-direction: column;
-    text-align: center;
-    list-style-type: none;
-    padding-inline-start: 0;
-    margin: 0 auto;
-    justify-content: center;
+  cursor: pointer;
 }
 
-  .socials {
-      height: 10vh;
-      display: none;
-      text-align: center;
-      margin: 0 auto;
-  }
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 3px;
+  background-color: #3f3e3e;
+  margin: 6px 0;
+  transition: 0.4s;
+}
 
-  .socials a {
-      padding: 10px;
-  }
+.nav_item {
+    padding: 15px 0;
+}
+
+.nav_list {
+  display: none;
+  height: 70vh;
+  flex-direction: column;
+  text-align: center;
+  list-style-type: none;
+  padding-inline-start: 0;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.socials {
+    height: 10vh;
+    display: none;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.socials a {
+    padding: 10px;
+}
 
 
 /* change class for mobile open menu */
 .change .bar1 {
-  transform: translate(0, 9px) rotate(-45deg);
+transform: translate(0, 9px) rotate(-45deg);
 }
 
 .change .bar2 {opacity: 0;}
 
 .change .bar3 {
-  transform: translate(0, -9px) rotate(45deg);
+transform: translate(0, -9px) rotate(45deg);
 } 
 
 .change .nav_list {
-  display: flex;
+display: flex;
 }
 
 .change .name {
-  display: none;
+display: none;
 }
 
 .change .socials {
-  display: block;
+display: block;
 }
 
 .change .nav-container {
-  flex-direction: column;
-  align-items: flex-end;
+flex-direction: column;
+align-items: flex-end;
 }
 
 main {
-  margin-top: 75px;
+margin-top: 75px;
 }
 
 /* footer */
 footer {
-  background-color: transparent;
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  left: 0;
-  border: 10px solid transparent;
-  border-left: 0;
-  border-right: 0;
+background-color: transparent;
+text-align: center;
+position: absolute;
+width: 100%;
+left: 0;
+border: 10px solid transparent;
+border-left: 0;
+border-right: 0;
+font-family: 'Nanum Pen Script', Times, serif;
 }
 
 .footer_socials a, .footer_info a {
-  color: #3f3e3e;
-  margin: 5px;
-  font-size: 0.8em;
-  font-weight: bolder;
+color: #3f3e3e;
+margin: 5px;
+font-size: 0.8em;
+font-weight: bolder;
 }
 
 /* dodie images */
 .dodie_container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.7em;
+display: grid;
+grid-template-columns: 1fr 1fr;
+text-align: center;
+align-items: center;
+justify-content: center;
+font-size: 0.7em;
 }
 
 .dodie_item img {
-  border-radius: 100%;
-  width: 90%;
+border-radius: 100%;
+width: 90%;
 }
 
 .dodie_item {
-  margin: 10px;
+margin: 10px;
 }
 
 #display {
-  display: none;
-  align-items: center;
-  justify-content: space-evenly;
-  text-align: center;
-  border-radius: 100%;
-  color:#000000;
-  background-color: transparent;
-  background-size: 100%;
+display: none;
+align-items: center;
+justify-content: space-evenly;
+text-align: center;
+border-radius: 100%;
+color:#000000;
+background-color: transparent;
+background-size: 100%;
 
-  /* for when the image appears */
-  background-repeat: no-repeat;
+/* for when the image appears */
+background-repeat: no-repeat;
 }
 
 #display img {
-  width: 100%;
-  border-radius: 100%;
-  border: 4px solid #9eb3cc;
-  margin: 0 auto;
+width: 100%;
+border-radius: 100%;
+border: 4px solid #9eb3cc;
+margin: 0 auto;
 }
 
 .controls {
-  padding-top: 40px;
+padding-top: 40px;
 }
 
 .controls img, img.play {
-  height: 50px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 10px;
+height: 50px;
+padding-left: 20px;
+padding-right: 20px;
+padding-bottom: 10px;
 }
 
 .pause {
-  display: none;
+display: none;
 }
 
 img.spin {
-  width: 80%;
+width: 80%;
 }
 
 @keyframes spinning {
-  from { transform: rotate(0deg) }
-  to { transform: rotate(360deg) }
+from { transform: rotate(0deg) }
+to { transform: rotate(360deg) }
 }
 
 .spin {
-  animation-delay: 0.25s;
-  animation-name: spinning;
-  animation-duration: 5s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+animation-delay: 0.25s;
+animation-name: spinning;
+animation-duration: 5s;
+animation-iteration-count: infinite;
+animation-timing-function: linear;
 }
 
 .cd_links, .cd h1 {
-  padding-top: 10px;
-  padding-bottom: 10px;
+padding-top: 10px;
+padding-bottom: 10px;
 }
 
 .cd_links a {
-  padding-right: 10px;
-  padding-left: 10px;
+padding-right: 10px;
+padding-left: 10px;
 }
 
 .cd_container {
-  display: flex;
-  flex-direction: column;
+display: flex;
+flex-direction: column;
 }
 
 .cd_container_left {
-  z-index: -1;
+z-index: -1;
 }
 
 /* tablet view */
 @media screen and (min-width: 800px) {
-  .menu_bars {
-    display: none;
-  }
-  .nav_list {
-    display: flex;
-    flex-direction: row;
-    height: auto;
-    margin: 0;
-  }
-  .nav_item {
-    padding: 0 15px;
-  }
-  #display {
-    display: block;
-  }
-  .dodie_container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
-  .dodie_display {
-    flex-basis: 100%;
-  }
-  #display img {
-    width: 60%;
-  }
-  .dodie_item {
-    flex-basis: 30%;
-  }
-  .song {
-    width: 90%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin: 0 auto;
-  }
-  .cd_container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  .cd_container_left, .cd_container_right {
-    width: 50%;
-  }
-  img.spin {
-    width: 100%;
-  }
-  #home-about {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  #home-about img {
-    width: 100%
-  }
-  #home-about div:nth-child(2) {
-    padding-left: 30px;
-  }
-  #artists {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-  #sour {
-    width: 80%;
-  }
-  .laufey-music {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-  .laufey-music-item:first-child {
-    grid-column: span 2;
-    grid-row: span 2;
-  }
-  .laufey-music-item:nth-child(2) img, .laufey-music-item:nth-child(3) img {
-    width: 75%;
-  }
-  iframe {
-    width:  450px;
-  }
+.menu_bars {
+  display: none;
+}
+.nav_list {
+  display: flex;
+  flex-direction: row;
+  height: auto;
+  margin: 0;
+}
+.nav_item {
+  padding: 0 15px;
+}
+#display {
+  display: block;
+}
+.dodie_container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.dodie_display {
+  flex-basis: 100%;
+}
+#display img {
+  width: 60%;
+}
+.dodie_item {
+  flex-basis: 30%;
+}
+.song {
+  width: 90%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin: 0 auto;
+}
+.cd_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.cd_container_left, .cd_container_right {
+  width: 50%;
+}
+img.spin {
+  width: 100%;
+}
+#home-about {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+#home-about img {
+  width: 100%
+}
+#home-about div:nth-child(2) {
+  padding-left: 30px;
+}
+#artists {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+#sour {
+  width: 80%;
+}
+.laufey-music {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.laufey-music-item:first-child {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+.laufey-music-item:nth-child(2) img, .laufey-music-item:nth-child(3) img {
+  width: 75%;
+}
+iframe {
+  width:  450px;
+}
 }
 
 /* desktop and laptop view */
 @media screen and (min-width: 1000px) {
-  .socials {
-    display: flex;
-    margin: 0;
-    height: auto;
-    order: 2;
-  }
-  .name {
-    order: 1;
-  }
-  .nav_list {
-    order: 0;
-  }
-  .song_container {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-  .song_info {
-    width: 100%;
-    padding: 1em;
-  }
-  .song_image {
-    width: auto;
-  }
-  .song:last-child {
-    padding-bottom: 0px;
-  }
-  .song {
-    flex-direction: column;
-    flex-basis: 25%;
-  }
-  .song h1 {
-    font-size: 0.9em;
-  }
-  .song h2 {
-    font-size: 0.7em;
-  }
-  .song img {
-    width: 350px;
-    margin: 10px;
-  }
-  .song_links {
-    display: block;
-    padding-top: 1.5em;
-  }
-  .song_links a {
-    padding: 0.5em;
-  }
-  img.spin {
-    width: 70%;
-  }
-  #display.dodie {
-    flex-basis: 40%;
-    padding-right: 10px;
-  }
-  #display img {
-    width: 100%;
-    float: left;
-  }
-  .dodie_item {
-    flex-basis: 20%;
-  }
-  #artists {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  }
-  #sour {
-    width: 60%;
-  }
-  .laufey-music {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-  .laufey-music-item:nth-child(-n+3):nth-child(n+2) img {
-    width: 100%;
-  }
-  .laufey-music-item:nth-child(2) {
-    grid-column: span 2;
-    grid-row: span 2;
-  }
+.socials {
+  display: flex;
+  margin: 0;
+  height: auto;
+  order: 2;
+}
+.name {
+  order: 1;
+}
+.nav_list {
+  order: 0;
+}
+.song_container {
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.song_info {
+  width: 100%;
+  padding: 1em;
+}
+.song_image {
+  width: auto;
+}
+.song:last-child {
+  padding-bottom: 0px;
+}
+.song {
+  flex-direction: column;
+  flex-basis: 25%;
+}
+.song h1 {
+  font-size: 0.9em;
+}
+.song h2 {
+  font-size: 0.7em;
+}
+.song img {
+  width: 350px;
+  margin: 10px;
+}
+.song_links {
+  display: block;
+  padding-top: 1.5em;
+}
+.song_links a {
+  padding: 0.5em;
+}
+img.spin {
+  width: 70%;
+}
+#display.dodie {
+  flex-basis: 40%;
+  padding-right: 10px;
+}
+#display img {
+  width: 100%;
+  float: left;
+}
+.dodie_item {
+  flex-basis: 20%;
+}
+#artists {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+#sour {
+  width: 60%;
+}
+.laufey-music {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.laufey-music-item:nth-child(-n+3):nth-child(n+2) img {
+  width: 100%;
+}
+.laufey-music-item:nth-child(2) {
+  grid-column: span 2;
+  grid-row: span 2;
+}
 }
 
 @media (prefers-reduced-motion) {
-  .spin {
-    animation: none;
-  }
+.spin {
+  animation: none;
+}
 }
